--- a/client/components/header.html
+++ b/client/components/header.html
@@ -13,13 +13,11 @@
     </a>
 </div>
 <div class="social-media">
-    <a href="#" aria-label="Facebook">
+    <a href="https://www.facebook.com/" aria-label="Facebook">
         <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="#" aria-label="Instagram">
+    <a href="https://www.instagram.com/" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
     </a>
-    <a href="#" aria-label="Twitter">
-        <i class="fab fa-twitter"></i>
-    </a>
+    
 </div>
