updated sql file

--- a/client/components/header.html
+++ b/client/components/header.html
@@ -10,10 +10,10 @@
     </a>
 </div>
 <div class="social-media">
-    <a href="#" id="header-facebook" aria-label="Facebook">
+    <a href="#" target="_blank" id="header-facebook" aria-label="Facebook">
         <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="#" id="header-instagram" aria-label="Instagram">
+    <a href="#" target="_blank" id="header-instagram" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
     </a>
 </div>
